<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.weatherdemo.ui.prelogin.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.weatherdemo.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_lg_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/xxxlarge_padding_or_margin"
            android:fontFamily="@font/roosterpersonaluse"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_lg_app_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_lg_app_logo"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/title_login_to_your_account"
            android:textSize="@dimen/small_text_size" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lg_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_textfield_default"
                android:hint="@string/title_username"
                android:textColorHint="@color/colorGrey"
                android:theme="@style/DefaultTextInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusBottomStart="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusTopEnd="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusTopStart="@dimen/xsmall_padding_or_margin"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_app_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_lg_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:paddingTop="@dimen/xsmall_padding_or_margin"
                    android:paddingBottom="@dimen/xsmall_padding_or_margin"
                    android:text="@={loginViewModel.inputUsername}"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/small_text_size"
                    android:theme="@style/DefaultTextEditTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lg_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_textfield_default"
                android:layout_marginTop="@dimen/normal_padding_or_margin"
                android:hint="@string/title_password"
                android:textColorHint="@color/colorGrey"
                android:theme="@style/DefaultTextInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusBottomStart="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusTopEnd="@dimen/xsmall_padding_or_margin"
                app:boxCornerRadiusTopStart="@dimen/xsmall_padding_or_margin"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_app_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_lg_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/xsmall_padding_or_margin"
                    android:paddingBottom="@dimen/xsmall_padding_or_margin"
                    android:text="@={loginViewModel.inputPassword}"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/small_text_size"
                    android:theme="@style/DefaultTextEditTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_lg_login"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/normal_padding_or_margin"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/xsmall_padding_or_margin"
                android:onClick="@{()->loginViewModel.doLogin()}"
                android:text="@string/title_login"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_lg_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/normal_padding_or_margin"
                android:onClick="@{()->loginViewModel.signUP()}"
                android:text="@string/title_create_account_info"
                android:textSize="@dimen/medium_text_size" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_lg_copyrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title_copyrights"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/xsmall_text_size" />

    </RelativeLayout>

</layout>