<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="currentWeatherViewModel"
            type="com.example.weatherdemo.viewmodel.CurrentWeatherViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="@{currentWeatherViewModel.isViewVisible() ? View.GONE : View.VISIBLE}" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_fcw_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{currentWeatherViewModel.isViewVisible() ? View.VISIBLE : View.GONE}">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_fcw_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_fcw_weather_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/normal_padding_or_margin"
                    android:background="@color/colorCardBackground"
                    android:elevation="@dimen/xxsmall_padding_or_margin"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/xsmall_padding_or_margin">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_fcw_current_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/title_not_available"
                        android:text="@{currentWeatherViewModel.locationText}"
                        android:textSize="@dimen/normal_text_size" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding_or_margin"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_fcw_current_weather_indicator"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_sunny" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_fcw_current_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/xsmall_padding_or_margin"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center_horizontal"
                            android:hint="@string/title_na"
                            android:textColor="@android:color/black"
                            android:textSize="32sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_fcw_current_weather_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding_or_margin"
                        android:hint="@string/title_not_available"
                        android:textSize="@dimen/normal_text_size" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_padding_or_margin"
                    android:layout_marginEnd="@dimen/normal_padding_or_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/title_weather_forecast_details"
                    android:textSize="@dimen/small_text_size" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_padding_or_margin"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/xsmall_padding_or_margin"
                            android:layout_weight="1"
                            android:background="@color/colorCellBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="@dimen/xxsmall_padding_or_margin">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_sunrise" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_fcw_fd_sd_sunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:hint="@string/title_na"
                                android:padding="@dimen/small_padding_or_margin"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/small_text_size" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/xsmall_padding_or_margin"
                            android:layout_weight="1"
                            android:background="@color/colorCellBackground"
                            android:orientation="horizontal"
                            android:padding="@dimen/xxsmall_padding_or_margin"
                            android:weightSum="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_sunset" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_fcw_fd_sd_sunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:hint="@string/title_na"
                                android:padding="@dimen/small_padding_or_margin"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/small_text_size" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_padding_or_margin"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/xsmall_padding_or_margin"
                            android:layout_weight="1"
                            android:background="@color/colorCellBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="@dimen/xxsmall_padding_or_margin">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_wind_speed" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_fcw_fd_wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:hint="@string/title_na"
                                android:padding="@dimen/small_padding_or_margin"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/small_text_size" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/xsmall_padding_or_margin"
                            android:layout_weight="1"
                            android:background="@color/colorCellBackground"
                            android:orientation="horizontal"
                            android:padding="@dimen/xxsmall_padding_or_margin"
                            android:weightSum="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_humidity" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_fcw_fd_humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:hint="@string/title_na"
                                android:padding="@dimen/small_padding_or_margin"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/small_text_size" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>
